--- a/app/src/main/res/layout/medication_card.xml
+++ b/app/src/main/res/layout/medication_card.xml
@@ -23,6 +23,14 @@
             android:layout_alignParentEnd="true"
             android:text="Add" />
 
+        <Button
+            android:id="@+id/buttonMedicationDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/buttonAddPrescription"
+            android:layout_alignParentEnd="true"
+            android:text="Details" />
+
         <TextView
             android:id="@+id/viewMedName"
             android:layout_width="wrap_content"
