[Yichen,Emilio](REF) put hardcoded method into an actual method??TimeHelper

--- a/app/src/main/res/layout/activity_dosage.xml
+++ b/app/src/main/res/layout/activity_dosage.xml
@@ -36,7 +36,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout3"
+        app:layout_constraintTop_toBottomOf="@+id/dow"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -44,7 +44,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="DOW"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view" />
+        app:layout_constraintBottom_toTopOf="@+id/CalendarRecycler"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout3" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
