--- a/app/src/main/res/layout/prescription_card.xml
+++ b/app/src/main/res/layout/prescription_card.xml
@@ -20,8 +20,12 @@
             android:id="@+id/buttonEditPrescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/buttonTakeMed"
-            android:layout_alignParentTop="true"
+            android:layout_below="@+id/buttonRefillMed"
+            android:layout_alignEnd="@+id/buttonRefillMed"
+
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="-2dp"
+            android:layout_marginRight="-92dp"
             android:text="Edit" />
 
         <TextView
@@ -59,9 +63,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/viewMedGenNamePrescription"
-            android:layout_toRightOf="@id/labelDosage"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="8dp"
+            android:layout_toRightOf="@id/labelDosage"
             android:text="~the dosage value goes here~" />
 
         <Button
@@ -77,29 +81,109 @@
             android:id="@+id/buttonRefillMed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_below="@id/buttonTakeMed"
-            android:text="Refill"  />
+            android:layout_alignParentEnd="true"
+            android:text="Refill" />
 
         <TextView
             android:id="@+id/labelQuantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Quantity:"
+            android:layout_below="@id/labelDosage"
             android:layout_marginStart="6dp"
             android:layout_marginTop="8dp"
-            android:layout_below="@id/labelDosage" />
+            android:text="Quantity:" />
 
         <TextView
             android:id="@+id/viewQuantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/viewPrescriptionDosage"
             android:layout_marginStart="6dp"
             android:layout_marginTop="8dp"
-            android:layout_below="@id/viewPrescriptionDosage"
             android:layout_toRightOf="@id/labelQuantity"
             android:text="~Total Quantity goes here
-            ~"/>
+            ~" />
+
+        <TextView
+            android:id="@+id/txtM"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/labelQuantity"
+            android:layout_alignStart="@+id/labelQuantity"
+            android:layout_marginStart="-4dp"
+            android:layout_marginTop="9dp"
+            android:text="M" />
+
+        <TextView
+            android:id="@+id/txtT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/labelQuantity"
+            android:layout_alignStart="@+id/labelQuantity"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="10dp"
+            android:text="T" />
+
+        <TextView
+            android:id="@+id/txtS1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/labelQuantity"
+            android:layout_alignStart="@+id/labelQuantity"
+            android:layout_marginStart="71dp"
+            android:layout_marginTop="10dp"
+            android:text="S" />
+
+        <TextView
+            android:id="@+id/txtS2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/labelQuantity"
+            android:layout_alignStart="@+id/labelQuantity"
+            android:layout_marginStart="84dp"
+            android:layout_marginTop="10dp"
+            android:text="S" />
+
+        <TextView
+            android:id="@+id/txtF2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/labelQuantity"
+            android:layout_alignStart="@+id/labelQuantity"
+            android:layout_marginStart="58dp"
+            android:layout_marginTop="10dp"
+            android:text="F" />
+
+        <TextView
+            android:id="@+id/txtR2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/labelQuantity"
+            android:layout_alignStart="@+id/labelQuantity"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="10dp"
+            android:text="R" />
+
+        <TextView
+            android:id="@+id/txtW"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/labelQuantity"
+            android:layout_alignStart="@+id/labelQuantity"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="10dp"
+            android:text="W" />
+
+        <TextView
+            android:id="@+id/txtMedTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/viewQuantity"
+            android:layout_marginStart="9dp"
+            android:layout_marginTop="9dp"
+            android:layout_toEndOf="@+id/txtS2"
+            android:text="time" />
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
